--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.lhy.xposed.pref_mhzs"
+        applicationId "com.lhy.xposed.mhzs"
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
@@ -28,5 +28,6 @@ dependencies {
     compileOnly files('lib/XposedBridgeApi-54.jar')
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'androidx.preference:preference:1.1.0-alpha03'
+    implementation 'com.github.didikee:AndroidDonate:0.1.0'
 
 }
