--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
-        versionName "0.6.6 Beta"
+        versionName "0.6.7 Beta"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -30,5 +30,9 @@ dependencies {
     implementation 'com.github.didikee:AndroidDonate:0.1.0'
     compileOnly 'de.robv.android.xposed:api:82'
     compileOnly 'de.robv.android.xposed:api:82:sources'
-
+    implementation 'com.vladsch.flexmark:flexmark:0.40.22'
+    implementation 'com.vladsch.flexmark:flexmark-util:0.40.22'
+    implementation 'com.vladsch.flexmark:flexmark-ext-tables:0.40.22'
+    implementation 'com.vladsch.flexmark:flexmark-profile-pegdown:0.40.22'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 }
