--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.lhy.xposed.mhzs"
         minSdkVersion 17
         targetSdkVersion 27
-        versionCode 1
-        versionName "0.6.10 Beta"
+        versionCode 1105
+        versionName "0.6.11 Beta"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -35,4 +35,8 @@ dependencies {
     implementation 'com.vladsch.flexmark:flexmark-ext-tables:0.40.22'
     implementation 'com.vladsch.flexmark:flexmark-profile-pegdown:0.40.22'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation 'cn.bmob.android:bmob-sdk:3.7.0'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'com.squareup.okio:okio:2.1.0'
 }
