--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:value="true" />
         <meta-data
             android:name="xposeddescription"
-            android:value="一款开源的净化麻花影视的插件" />
+            android:value="一款开源的永久免费的净化麻花影视的插件" />
         <meta-data
             android:name="xposedminversion"
             android:value="54" />
